# ws_fanuc

./: .gitignore  README.md
install/: local_setup.sh  setup.sh
install/fanuc_controllers/share/fanuc_controllers/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/fanuc_crx_description/share/fanuc_crx_description/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/fanuc_libs/share/fanuc_libs/: package.bash  (+4 more)
log/: latest_build
src/mi_fanuc/: CMakeLists.txt  package.xml
src/mi_fanuc/config/: crx30ia_robotiq.srdf  initial_positions.yaml  joint_limits.yaml  moveit_controllers.yaml  ompl_planning.yaml  pilz_cartesian_limits.yaml  pilz_industrial_motion_planner_planning.yaml  ros2_controllers.yaml
src/mi_fanuc/isaac_sim_assets/: ROS_Camera_mi.usd  fanuc_ActionGraph.usd  mi_fanuc.usd
src/mi_fanuc/isaac_sim_assets/crx30ia_robotiq/: crx30ia_robotiq.usd
src/mi_fanuc/isaac_sim_assets/crx30ia_robotiq/configuration/: crx30ia_robotiq_physics.usd  crx30ia_robotiq_sensor.usd
src/mi_fanuc/launch/: mi_fanuc_gripper.launch.py  mi_fanuc_mock_control.launch.py
src/mi_fanuc/otros/: fanuc_ActionGraph2.usd
src/mi_fanuc/scripts_control/: collision_scene_manager.py  fanuc_control.py  fanuc_grasp_app.py
src/mi_fanuc/scripts_vision/: README_ENV.md  realtime_seg_detector.py
src/mi_fanuc/scripts_vision/segment/runs/segment/steering_segmentation/: args.yaml  results.csv
src/mi_fanuc/urdf/: crx30ia_robotiq.urdf.xacro
src/serial-release-release-humble-serial/: package.xml
(+533 files in other folders)
