<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mi_fanuc</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="javhualde@gmail.com">hualde</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Dependencias para el launch file -->
  <exec_depend>fanuc_crx_description</exec_depend>
  <exec_depend>fanuc_lrmate_description</exec_depend>
  <exec_depend>fanuc_m10_description</exec_depend>
  <exec_depend>fanuc_m20_description</exec_depend>
  <exec_depend>fanuc_r1000ia_description</exec_depend>
  <exec_depend>fanuc_r2000_description</exec_depend>
  <exec_depend>robotiq_description</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>gazebo_ros_pkgs</exec_depend>

  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>xacro</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
